%% Mermaid ER diagram — regenerated by moai-domain-db-docs sync 2026-06-14
%% Do not edit manually — changes will be overwritten on next auto-sync.
%% To make permanent structural changes, update your migration files instead.
%% Source: supabase/migrations/0001-0015 (SPEC-DB-001, 272 pgTAP tests pass)
erDiagram
    users {
        uuid id PK
        text email UK
        text nickname
        text avatar_url
        text provider
        time reading_alarm_time
        bool reading_alarm_enabled
        text role
        timestamptz created_at
        timestamptz updated_at
    }
    books {
        uuid id PK
        text isbn UK
        text title
        text author
        timestamptz created_at
    }
    user_books {
        uuid id PK
        uuid user_id FK
        uuid book_id FK
        text status
        int current_page
        bool is_public
        timestamptz started_reading_at
        timestamptz completed_at
        timestamptz last_progress_at
        timestamptz created_at
        timestamptz updated_at
    }
    clubs {
        uuid id PK
        text name
        uuid book_id FK
        uuid host_id FK
        text type
        text status
        timestamptz created_at
    }
    club_members {
        uuid id PK
        uuid club_id FK
        uuid user_id FK
        text role
        timestamptz joined_at
    }
    join_requests {
        uuid id PK
        uuid club_id FK
        uuid requester_id FK
        text status
        text message
        timestamptz responded_at
        timestamptz created_at
    }
    emotion_records {
        uuid id PK
        uuid user_id FK
        uuid book_id FK
        uuid club_id FK
        int page_number
        text content
        text visibility
        timestamptz created_at
        timestamptz updated_at
    }
    sticker_reactions {
        uuid id PK
        uuid record_id FK
        uuid user_id FK
        sticker_type sticker_type
        timestamptz created_at
    }
    reading_sessions {
        uuid id PK
        uuid user_id FK
        uuid book_id FK
        int duration_seconds
        int pages_read
        timestamptz started_at
        timestamptz ended_at
    }
    completion_reports {
        uuid id PK
        uuid user_id FK
        uuid book_id FK
        uuid user_book_id UK_FK
        jsonb report_data
        timestamptz created_at
    }
    point_logs {
        uuid id PK
        uuid user_id FK
        int amount
        text reason
        timestamptz created_at
    }
    notifications {
        uuid id PK
        uuid user_id FK
        text type
        text title
        text body
        bool is_read
        uuid ref_id
        timestamptz created_at
    }

    users ||--o{ user_books : "owns"
    users ||--o{ emotion_records : "writes"
    users ||--o{ clubs : "hosts"
    users ||--o{ club_members : "joins"
    users ||--o{ join_requests : "requests"
    users ||--o{ reading_sessions : "logs"
    users ||--o{ completion_reports : "completes"
    users ||--o{ point_logs : "earns"
    users ||--o{ notifications : "receives"
    users ||--o{ sticker_reactions : "reacts"

    books ||--o{ user_books : "in"
    books ||--o{ emotion_records : "about"
    books ||--o{ clubs : "topic"
    books ||--o{ reading_sessions : "read"
    books ||--o{ completion_reports : "reported"

    clubs ||--o{ club_members : "has"
    clubs ||--o{ join_requests : "receives"
    clubs ||--o{ emotion_records : "discussed in"

    emotion_records ||--o{ sticker_reactions : "receives"
    user_books ||--o| completion_reports : "generates"
